# vggt-pairuav

./: .gitignore  .gitmodules  README.md  README_zh.md  REPRODUCE.md  pyproject.toml
artifacts/: README.md
configs/: README.md  angle_s0.json  paths.example.env  range_b_mse_ab.json  range_c_rel_rich_legacy.json  smoke_angle.json  smoke_range.json  smoke_range_ab.json
configs/lamp/: angle_s0.json  range_ab_relsmooth.json  system.json
configs/submission/: range_c_rel_rich.json  system.json
data_index/: README.md  manifest.json  train_balanced_32768.txt  val10_index_meta.json  val10_offframe_2048.txt  val10_offgrid_2048.txt  val10_ongrid_2048.txt  val_full_204120.txt  val_quick_2048.txt
docs/: README.md  reproducibility.md
pairuav/: README.md  __init__.py  cache.py  data.py  eval_val.py  features.py  gate_merge.py  geometry.py  head_io.py  heads.py  index.py  infer_cache.py  infer_test.py  metrics.py  postproc_maphard.py  reproducibility.py  train_angle.py  train_range.py
pairuav/resources/: __init__.py  d_values.json  p348_map_weights.json
release/: ARTIFACTS.sha256  README.md  bundles.json  paper_artifact_map.json
release/manifests/: lamp_challenge_entry_822841_v1.sha256  lamp_ours_3seed_valquick_v1.sha256  lamp_probe_off_manifold_slope_v1.sha256  lamp_probe_on_manifold_v1.sha256  lamp_probe_sues200_v1.sha256
scripts/: evaluate_lamp_release.sh  reproduce_submission.sh  summarize_release_metrics.py  train_lamp.sh
tests/: test_core.py  test_safety.py
